...
    const navigateRoute = (route)=> {
        (route) ? router.push({pathname: route}) : getFunction();
    };

    return (
        <View style={styles.container}>
            <View testID="Profile Button">
                <TouchableOpacity
                    onPress={()=> setModalVisible(true)}
                    title="Profile"
                    accessibilityLabel="Learn more about this purple button"
                    style={styles.profile}
                    underlayColor={colors.separator}  
...
